<resources>
    <string name="app_name">Foliyoo</string>
    <string name="login">Login</string>
    <string name="enter_your_user">Enter your Email/Mobile No</string>
    <string name="enter_your_pass">Enter Your Password</string>
    <string name="dont_have_account">Dont have account?</string>
    <string name="enter_verif">Enter Verification Code</string>
    <string name="dont_receiv">Didn\'t Receive the Code?</string>
    <string name="type_regest">Type Registered Mobile No.</string>
    <string name="you_will_re">You will receive a verification code on your registered mobile number</string>
    <string name="resend_now">Resend Now</string>
    <string name="submit">SUBMIT</string>
    <string name="login_caps">LOGIN</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="business">Business</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_caps">SIGN UP</string>
    <string name="personal">Personal</string>
    <string name="select_your_pickup_date">Select your Pickup Date</string>
    <string name="select_pickup_date">Select Pick-up Date</string>
    <string name="select_pickup_time">Select Pick-up Time</string>
    <string name="save">SAVE</string>
    <string name="Wallet">Wallet</string>
    <string name="my_bookings">My Bookings</string>
    <string name="support">Support</string>
    <string name="policies">Policies</string>
    <string name="invite">Invite</string>
    <string name="about_us">About us</string>
    <string name="log_out">Log out</string>
    <string name="join">Join Foliyoo Membership</string>
    <string name="by_creating">By creating an account you agree to ourTerms of Service and Privacy Policy</string>
    <string name="pick_up_loc">Pick-up Location</string>
    <string name="delivery_lo">Delivery Location</string>
    <string name="pickup_date">Pickup date</string>
    <string name="pickup_time">Pickup time</string>
    <string name="select_load">Select Load Type</string>
    <string name="full_load">Full Load</string>
    <string name="part_load">Part Load</string>
    <string name="box_load">Box Load</string>
    <string name="next">NEXT</string>
    <string name="truck_size">Truck Size</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="ex_large">Ex Large</string>
    <string name="ton_01_02">01-02 Ton</string>
    <string name="ton_02_05">02-05 Ton</string>
    <string name="ton_05_10">05-10 Ton</string>
    <string name="ton_10_15">10-15 Ton</string>
    <string name="truck_type">Truck Type</string>
    <string name="open">Open</string>
    <string name="container">Container</string>
    <string name="tank">Tank</string>
    <string name="other">Other</string>
    <string name="material">Material</string>
    <string name="alcoholic_beverages">Alcoholic Beverages</string>
    <string name="construction_materials">Construction Material</string>
    <string name="electronic_goods">Electronic Goods</string>
    <string name="electronic_">Electronic Battery</string>
    <string name="see_all">See All</string>
    <string name="search_resu">Search Result</string>
    <string name="sort_by">Sort By</string>
    <string name="booking_sum">Booking Summary</string>
    <string name="booking_con">Booking Confirmed</string>
    <string name="cancel_booking">CANCEL BOOKING</string>
    <string name="download_receipt">DOWNLOAD RECEIPT</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_mobile">Enter Mobile</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_gst_n">Enter GST Number</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="enter_regis">Enter Registered Mobile No. </string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="heyfromjona">Bhupendra Sahu</string>
    <string name="number">+91 124 124 1256</string>
    <string name="enter_6_di">Enter 6 digit verification code sent to \n+91 9874565414</string>
    <string name="set_new_pas">Set New Password</string>
    <string name="enter_new_p">Enter New Password</string>
    <string name="confirm_pas">Confirm Password</string>
    <string name="done">DONE</string>
    <string name="title_activity_home">home</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="foliyoo">FOLIYOO</string>
    <string name="select_mate">Select material type</string>
    <string name="bookings">Bookings</string>
    <string name="my_profile">My Profile</string>
    <string name="version_1_0">Version: 1.0.1 (Build Number: 12)</string>
    <string name="revision_nu">Revision Number: %1$S</string>
    <string name="copyright">Copyright 2020 - Foliyoo Technologies</string>
    <string name="book_your_v">Book your vehicles anywhere, anytime...</string>
    <string name="contact_us">Contact Us</string>
    <string name="e_mail">E-mail</string>
    <string name="phone_no">Phone No</string>
    <string name="e_mail_supp">E-mail: support@foliyoo.com</string>
    <string name="mobile_number">+91 637 050 3705</string>
    <string name="address">Address</string>
    <string name="foliyoo_tec">Foliyoo Technilogies Pvt. Ltd. 108-A, KIIT-TBI,\ncampus-11, KIIT, Patia, Bhubaneswar, Odisha, India</string>
    <string name="find_us_onl">Find Us Online</string>
    <string name="filter">Filter</string>
    <string name="select_mont">Select Month</string>
    <string name="who_are_we_">WHO ARE WE?</string>
    <string name="foliyoo_an_">FOLIYOO, an aggregate maker between transporter and customer, lands with the intension of shifting products with an economical and statistical way. By according to E-Logistic management system we can solve the entire communication gaps and will provide the foremost solution with an easy manner. Foliyoo believes that, needs were never an issue, it was the service that made the needs access tougher. Hence we thought up to act as an aggregate between transporter and customer to resolve this problem. Automatically, the need for a simplified transportation is solved upon.</string>
    <string name="why_are_we_">WHY ARE WE?</string>
    <string name="yes_competi">Yes, competitors are there but an advanced and additional service will allure users to us. Foliyoo is not only thinking about user but also taking keen steps to diminish exertion of drivers by implementing such emphatic attributes. By lessening cooling time of users we can make sure about proper delivery with safety precautions. The industrial sectors like Manufacturing Industry, Distribution Industry and Retailer Industry will be taken care of with high competent. Skilled operators and professionals are with us to deliver products like Construction equipments, Chemical products, Electrical as well as electronics appliances, alcoholic beverages, Home Appliances, Machine auto parts, packaged consumer box, Petroleum paint, and Pharmaceutical products.</string>
    <string name="our_vision_">OUR VISION ?</string>
    <string name="consumer_lo">Consumer loyalty is our most extreme objective, and we meet it on numerous occasions through the steady execution of our basic beliefs, including trustworthiness, devotion and quality.</string>
    <string name="our_commitm">OUR COMMITMENT ?</string>
    <string name="as_we_belie">As we believe this content is a huge responsibility, so that we give our customer significant serenity and help anyway we can to streamline their procedures and lighten pressure where conceivable. Our experts and cordial group will always relay on commitments and make customer the top priority.</string>
    <string name="invite_frie">Invite friends, get up to Rs 50.00/-</string>
    <string name="you_and_you">You and your friend will each get Rs 50.00 \nFoliyoo credit for your further trips</string>
    <string name="your_code_a">Your Code: </string>
    <string name="code">AB546Y</string>
    <string name="invite_now">INVITE NOW</string>
    <string name="payment">Payment</string>
    <string name="amount_to_p">Amount To Pay</string>
    <string name="net_banking">Net Banking</string>
    <string name="bhim_upi">Bhim UPI</string>
    <string name="debit_card">Debit Card</string>
    <string name="pay_now">PAY NOW</string>
    <string name="amount">Rs 13,999/-</string>
    <string name="foliyoo_wal">Foliyoo Wallet</string>
    <string name="wallet_amount">Rs 5,000/-</string>
    <string name="add_money">ADD MONEY</string>
    <string name="history">History</string>
    <string name="add_money_">Add Money</string>
    <string name="results">10 Results</string>
    <string name="xyz_transpo">XYZ Transportation Company,\nBhubaneshwar</string>
    <string name="search_amount">Rs 14,999/-</string>
    <string name="original_price">Rs 17,000/-</string>
    <string name="save_2_000_">Save Rs 2,000/-</string>
    <string name="book_now">BOOK NOW</string>
    <string name="no_of_reviews">( 1000 )</string>
    <string name="download">Download</string>
    <string name="booking_id_">Booking ID: 014 20154 325</string>
    <string name="nit_rourkela">NIT Rourkela</string>
    <string name="jharsuguda">Jharsuguda</string>
    <string name="tue_24_feb_">Tue 24 Feb,</string>
    <string name="pm">07:00 PM</string>
    <string name="km_">400 Km,</string>
    <string name="hr">12 Hr</string>
    <string name="booked">Booked</string>
    <string name="accepted">Accepted</string>
    <string name="loaded">Loaded</string>
    <string name="delivered">Delivered</string>
    <string name="payment_sum">Payment Summary</string>
    <string name="driver_details">Driver Details</string>
    <string name="jha_">Jha...</string>
    <string name="small_01">01 Small</string>
    <string name="congratulations">Congratulations</string>
    <string name="cancel_book">CANCEL BOOKING</string>
    <string name="this_privac">This Privacy Policy applies to the foliyoo.com\u000D</string>
    <string name="information">Information we collect\u000D</string>
    <string name="we_collect_">We collect information in different ways\u000D</string>
    <string name="use_of_your">Use of your personal information\u000D</string>
    <string name="email_opt_o">Email Opt-Out</string>
    <string name="third_party">Third party sites</string>
    <string name="grievance_o">Grievance Officer\u000D</string>
    <string name="updates_to_">Updates to this policy</string>
    <string name="jurisdictio">Jurisdiction</string>
    <string name="sivakumar_r">Sivakumar Reddy</string>
    <string name="PAN">15820</string>
    <string name="vehicle_num">Vehicle Number</string>
    <string name="driver_name">Driver Name</string>
    <string name="vehicle_mod">Vehicle Model</string>
    <string name="capacity">Capacity</string>
    <string name="vehicle_reg">Vehicle Registration Number</string>
    <string name="insurance_p">Insurance Policy Number</string>
    <string name="ap04_ap_638">AP04 AP 6382</string>
    <string name="tata_1109">TATA 1109</string>
    <string name="ton_18_fit">16 Ton 18 fit </string>
    <string name="vms0001">VMS0001</string>
</resources>