<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"/>

    <item
        android:id="@+id/navigation_support"
        android:icon="@drawable/ic_contact_support_24px"
        android:title="@string/support" />

    <item
        android:id="@+id/navigation_bookings"
        android:icon="@drawable/ic_mybookings_24px"
        android:title="@string/bookings" />
    <item
        android:id="@+id/navigation_invite"
        android:icon="@drawable/ic_invite_add_24px"
        android:title="@string/invite" />
    <item
        android:id="@+id/navigation_my_profile"
        android:icon="@drawable/ic_person_24px"
        android:title="@string/my_profile" />

</menu>
