<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".payment">

    <TextView
        android:id="@+id/textView37"
        style="@style/amount_to_p"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="18dp"
        android:text="@string/amount_to_p"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView38"
        style="@style/amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="17dp"
        android:text="@string/amount"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="61dp"
        android:src="@drawable/vector_8"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <RadioGroup
        android:layout_width="152dp"

        android:layout_height="119dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="103dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <RadioButton
            android:id="@+id/radioButton"
            android:paddingLeft="30dp"
            style="@style/net_banking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/net_banking" />

        <RadioButton
            android:id="@+id/radioButton2"
            style="@style/net_banking"
            android:paddingLeft="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bhim_upi" />

        <RadioButton
            android:id="@+id/radioButton3"
            style="@style/net_banking"
            android:paddingLeft="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/debit_card" />
    </RadioGroup>

    <Button
        android:id="@+id/button"
        style="@style/login"
        android:layout_width="375dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="331dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/red_button"
        android:text="@string/pay_now"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>